--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
 #main{
     padding: 10px;
 }
+#script_qrc{
+    width: 200px;
+    height: 200px;
+    position: fixed;
+    top: 40px;
+    left: 0;
+    z-index: 999;
+}
